objects/copado__Static_Code_Analysis_Result__c.object
<CustomObject>
    <description>This object stores the results of Static Code Analysis executed through Copado.</description>
    <fields>
        <fullName>copado__Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Number_of_Violations__c</fullName>
        <description>Overall number of rule violations.</description>
        <label>Number of Violations</label>
        <summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Rules_Violated__c</fullName>
        <label>Rules Violated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Score_v11__c</fullName>
        <description>New v11 version of the Score field.</description>
        <label>Score</label>
        <summarizedField>copado__Static_Code_Analysis_Violation__c.copado__Score__c</summarizedField>
        <summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Static Code Analysis Result</label>
    <nameField>
        <displayFormat>SCA-{00000}</displayFormat>
        <label>Static Code Analysis Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>